Updated loading of spike waveforms
There is a bug in NWB file format that doesn't allow for more units to be added after the NWB file is closed and written to disk.  To work around this, updated the AddPlexonSpikeDataToNWB and AddBlackrockSpikeDataToNWB functions to accept an already opened NWB file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .idea/*
 __pycache__/*
 env/*
+venv/*
 Example Data/*
 PLX SDK/*
 PyPL2/*
@@ -17,3 +18,4 @@ example_save_subset_nsx.py
 pynwb/
 scrap_code.py
 test.py
+/Gating/
